@@ -1,5 +1,7 @@
 usr/share/man/man8/perfdhcp.8
 usr/share/man/man8/kea-admin.8
+usr/share/man/man8/kea-shell.8
 usr/sbin/perfdhcp
 usr/sbin/kea-admin
+usr/sbin/kea-shell
 usr/share/kea/scripts 
