@@ -1,0 +1,3 @@
+usr/lib/python3.*/site-packages/kea/kea_conn.py
+usr/lib/python3.*/site-packages/kea/kea_connector3.py
+
