@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-# export DH_VERBOSE = 1
+export DH_VERBOSE = 1
 
 # see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
@@ -11,10 +11,6 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-
-# GCC "broken optimization" with GCC 5.3 causes problem
-# Remove optimization temporarily
-#export DEB_CXXFLAGS_MAINT_STRIP = -O2
 
 %:
 	dh $@ --with python3 --parallel -B
@@ -47,7 +43,7 @@ override_dh_auto_test:
 	dh_auto_test --no-parallel || /bin/true
 
 override_dh_install:
-	dh_install -X.la --list-missing
+	dh_install -X.la
 
 override_dh_clean:
 	dh_clean
